--- a/api/.env.example
+++ b/api/.env.example
@@ -1,1 +1,9 @@
+NODE_ENV="development"
 PORT=8080
+DEFAULT_LANGUAGE=es-ES
+DATABASE_HOST=localhost
+DATABASE_DIALECT=mysql
+DATABASE_USER=root
+DATABASE_PASSWORD=password
+DATABASE_NAME=telegram-bot
+
